# AmbientLighting

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
include/: color_handler.hpp
scripts/: lighting.py  ui.py
src/: color_handler.cpp
